--- a/flight/app/globals.css
+++ b/flight/app/globals.css
@@ -1,11 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: "Roboto", sans-serif;
-}
-.gradient{
-  filter: blur(30px);
-}
+/* Create Business */
+
+.business-form_image-label {
+    @apply flex h-24 w-24 items-center justify-center rounded-full  !important;
+  }
+  
+  .business-form_image-input {
+    @apply cursor-pointer border-none bg-transparent outline-none file:text-blue-500 !important;
+  }
+  
+  .business-form_input {
+    @apply border   !important;
+  }
+  
